<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:paddingLeft="@dimen/space_dimens_15"
    android:paddingRight="@dimen/space_dimens_15"
    android:visibility="gone"
    android:id="@+id/view_riding_sticker"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/space_dimens_12"
    android:layout_marginLeft="@dimen/space_dimens_12"
    android:layout_marginRight="@dimen/space_dimens_12"
    app:cardCornerRadius="11dp"
    android:elevation="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_dimens_12"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/riding_bike_number" />

                <TextView
                    android:id="@+id/tv_info_bike"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/tv_number_color"
                    android:textSize="@dimen/text_dimens_16"
                    android:text="2345678946" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:background="@color/hint_color_line" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:paddingTop="@dimen/space_dimens_20"
                android:paddingBottom="@dimen/space_dimens_20"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/tv_riding_ing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/text_dimens_12"
                    android:textColor="@color/content_foreground"
                    android:text="@string/riding_bike_charge" />

                <TextView
                    android:id="@+id/tv_time_ing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/text_dimens_12"
                    android:textColor="@color/content_foreground"
                    android:text="@string/riding_bike_time" />

                <TextView
                    android:id="@+id/tv_distance_ing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/text_dimens_12"
                    android:textColor="@color/content_foreground"
                    android:text="@string/riding_bike_distance" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>