<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_ride_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.panda.sharebike.ui.widget.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_default" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:elevation="5dp"
        app:cardCornerRadius="11dp"
        app:contentPaddingTop="@dimen/space_dimens_40">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:background="@color/cardview_dark_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/space_dimens_12">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="单车编号 12345677898787" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:background="@color/cardview_dark_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/space_dimens_20"
                android:paddingTop="@dimen/space_dimens_20">


                <TextView
                    android:id="@+id/tv_riding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/riding_bike_charge"
                    android:textColor="@color/content_foreground"
                    android:textSize="@dimen/text_dimens_12" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/riding_bike_time"
                    android:textColor="@color/content_foreground"
                    android:textSize="@dimen/text_dimens_12" />

                <TextView
                    android:id="@+id/tv_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/riding_bike_distance"
                    android:textColor="@color/content_foreground"
                    android:textSize="@dimen/text_dimens_12" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>