<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_un_order_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:elevation="5dp"
        app:cardCornerRadius="11dp"
        android:layout_marginLeft="@dimen/space_dimens_12"
        android:layout_marginRight="@dimen/space_dimens_12"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/space_dimens_12"
                android:paddingBottom="@dimen/space_dimens_12"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_order" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/text_dimens_11"
                    android:text="@string/order_use_position" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:background="@color/cardview_dark_background" />
            <!--单车编号 倒计时进度条-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/space_dimens_40"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/riding_bike_number"
                        android:textColor="@color/content_foreground"
                        android:textSize="@dimen/text_dimens_12" />

                    <TextView
                        android:id="@+id/tv_unorder_car"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingTop="@dimen/space_dimens_6"
                        android:text="452632841"
                        android:textColor="@color/tv_number_color"
                        android:textSize="@dimen/text_dimens_16" />
                </LinearLayout>

                <com.panda.sharebike.ui.widget.CountDownProgress
                    android:id="@+id/countdownProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/space_dimens_20"
                    android:layout_marginRight="@dimen/space_dimens_40" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_recharge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"
                android:background="@drawable/bg_unorder_use_car"
                android:enabled="false"
                android:text="@string/unorder_user_car"
                android:textColor="@color/et_hint_foreground"
                android:textSize="@dimen/sub_title_size" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>